add new stuff from cuda4

--- a/deep_q_learning/notebooks/plot_experience.ipynb
+++ b/deep_q_learning/notebooks/plot_experience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -20,7 +20,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -183,7 +185,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -216,7 +220,9 @@
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -322,11 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.sandbox.cuda): The cuda backend is deprecated and will be removed in the next release (v0.10).  Please switch to the gpuarray backend. You can get more information about how to switch at this URL:\n",
+      " https://github.com/Theano/Theano/wiki/Converting-to-the-new-gpu-back-end%28gpuarray%29\n",
+      "\n",
+      "Using gpu device 1: Tesla K40c (CNMeM is disabled, cuDNN 5004)\n"
+     ]
+    }
+   ],
    "source": [
     "import lasagne\n",
     "import theano\n",
@@ -369,16 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -389,7 +399,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-04-01 11:03:58,605] Making new env: Pong-v0\n"
+      "[2017-04-02 15:59:38,181] Making new env: Pong-v0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'dqn_paper_net' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-a50b44f74dfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Pong-v0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ml_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdqn_paper_net\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dqn_paper_net' is not defined"
      ]
     }
    ],
@@ -402,7 +423,9 @@
    "cell_type": "code",
    "execution_count": 104,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -424,7 +447,9 @@
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -457,7 +482,9 @@
    "cell_type": "code",
    "execution_count": 119,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -469,7 +496,9 @@
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -500,7 +529,9 @@
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -512,7 +543,9 @@
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -543,7 +576,9 @@
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -574,7 +609,9 @@
    "cell_type": "code",
    "execution_count": 125,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -593,6 +630,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "----------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<lasagne.layers.input.InputLayer object at 0x7f71e9d4d810> (None, 4, 80, 80)\n",
+      "<lasagne.layers.conv.Conv2DLayer object at 0x7f71e9d4dad0> (None, 16, 19, 19)\n",
+      "<lasagne.layers.conv.Conv2DLayer object at 0x7f71e9d4dd10> (None, 32, 8, 8)\n",
+      "<lasagne.layers.dense.DenseLayer object at 0x7f71e9d5a050> (None, 256)\n",
+      "<lasagne.layers.dense.DenseLayer object at 0x7f71e9d5a410> (None, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "l_out = dqn_paper_net(env)\n",
+    "for layer in get_all_layers(l_out):\n",
+    "    print layer, layer.output_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, 16, 20, 20)"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l_deconv1 = Deconv2DLayer(l_out.input_layer.input_layer, num_filters=16, filter_size=8, stride=2, crop=1)\n",
+    "l_deconv1.output_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, 4, 80, 80)"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l_deconv2 = Deconv2DLayer(l_deconv1, num_filters=4, filter_size=4, stride=4)\n",
+    "l_deconv2.output_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33792"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.prod( l_deconv1.W.get_value().shape ) + np.prod( l_deconv2.W.get_value().shape )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, 32, 8, 8)"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l_out.input_layer.input_layer.output_shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a two-armed architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dqn_paper_net_fp(env, args={}):\n",
+    "    def batch_norm_or_not(layer, bn):\n",
+    "        if bn:\n",
+    "            return batch_norm(layer)\n",
+    "        else:\n",
+    "            return layer\n",
+    "    nonlinearity = rectify if \"nonlinearity\" not in args else args[\"nonlinearity\"]\n",
+    "    bn = True if \"batch_norm\" in args else False\n",
+    "    #height, width, nchannels = env.observation_space.shape\n",
+    "    outs = {}\n",
+    "    height, width = 80, 80\n",
+    "    nchannels = 4 # we convert to black and white and use 4 prev frames\n",
+    "    layer = InputLayer((None, nchannels, height, width))\n",
+    "    layer = batch_norm_or_not(Conv2DLayer(layer, filter_size=8, num_filters=16, stride=4, nonlinearity=nonlinearity), bn)\n",
+    "    layer = batch_norm_or_not(Conv2DLayer(layer, filter_size=4, num_filters=32, stride=2, nonlinearity=nonlinearity), bn)\n",
+    "    # Q branch\n",
+    "    q = DenseLayer(layer, num_units=256, nonlinearity=nonlinearity)  # no bn for a reason\n",
+    "    q = DenseLayer(q, num_units=env.action_space.n, nonlinearity=linear)\n",
+    "    # future prediction\n",
+    "    fp = batch_norm_or_not(Deconv2DLayer(layer, num_filters=16, filter_size=8, stride=2, crop=1), bn)\n",
+    "    fp = batch_norm_or_not(Deconv2DLayer(fp, num_filters=4, filter_size=4, stride=4, nonlinearity=sigmoid), bn)\n",
+    "    return {\n",
+    "        \"q\": q,\n",
+    "        \"fp\": fp\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<lasagne.layers.input.InputLayer object at 0x7f7467fa9f10> (None, 4, 80, 80)\n",
+      "<lasagne.layers.conv.Conv2DLayer object at 0x7f7467fa9f90> (None, 16, 19, 19)\n",
+      "<lasagne.layers.normalization.BatchNormLayer object at 0x7f7467ff9cd0> (None, 16, 19, 19)\n",
+      "<lasagne.layers.special.NonlinearityLayer object at 0x7f7467fba8d0> (None, 16, 19, 19)\n",
+      "<lasagne.layers.conv.Conv2DLayer object at 0x7f7467a150d0> (None, 32, 8, 8)\n",
+      "<lasagne.layers.normalization.BatchNormLayer object at 0x7f7467a15450> (None, 32, 8, 8)\n",
+      "<lasagne.layers.special.NonlinearityLayer object at 0x7f7467a15910> (None, 32, 8, 8)\n",
+      "<lasagne.layers.dense.DenseLayer object at 0x7f7467a15ad0> (None, 256)\n",
+      "<lasagne.layers.dense.DenseLayer object at 0x7f7467a15cd0> (None, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for layer in get_all_layers(dqn_paper_net_fp(env, {\"batch_norm\":True})[\"q\"]):\n",
+    "    print layer, layer.output_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<lasagne.layers.input.InputLayer object at 0x7f7467f7c750> (None, 4, 80, 80)\n",
+      "<lasagne.layers.conv.Conv2DLayer object at 0x7f7467fc8610> (None, 16, 19, 19)\n",
+      "<lasagne.layers.normalization.BatchNormLayer object at 0x7f7467f74ed0> (None, 16, 19, 19)\n",
+      "<lasagne.layers.special.NonlinearityLayer object at 0x7f7467a35c50> (None, 16, 19, 19)\n",
+      "<lasagne.layers.conv.Conv2DLayer object at 0x7f7467a35e10> (None, 32, 8, 8)\n",
+      "<lasagne.layers.normalization.BatchNormLayer object at 0x7f7467a35fd0> (None, 32, 8, 8)\n",
+      "<lasagne.layers.special.NonlinearityLayer object at 0x7f7467a1a610> (None, 32, 8, 8)\n",
+      "<lasagne.layers.conv.TransposedConv2DLayer object at 0x7f7467a1ad50> (None, 16, 20, 20)\n",
+      "<lasagne.layers.normalization.BatchNormLayer object at 0x7f7467a1f1d0> (None, 16, 20, 20)\n",
+      "<lasagne.layers.special.NonlinearityLayer object at 0x7f7467a1f6d0> (None, 16, 20, 20)\n",
+      "<lasagne.layers.conv.TransposedConv2DLayer object at 0x7f7467a1f890> (None, 4, 80, 80)\n",
+      "<lasagne.layers.normalization.BatchNormLayer object at 0x7f7467a1fb50> (None, 4, 80, 80)\n",
+      "<lasagne.layers.special.NonlinearityLayer object at 0x7f7467a2b090> (None, 4, 80, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for layer in get_all_layers(dqn_paper_net_fp(env, {\"batch_norm\":True})[\"fp\"]):\n",
+    "    print layer, layer.output_shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -607,18 +872,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
   }
  },
  "nbformat": 4,
